--- a/tsconfig.json
+++ b/tsconfig.json
@@ -8,7 +8,8 @@
     "stripInternal": true,
     "declaration": true,
     "outDir": "./dist",
-    "lib": ["es2015", "dom"]
+    "lib": ["es2015", "dom"],
+    "moduleResolution": "node"
   },
   "files": [
     "./src/app.ts",
