--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,14 +1,14 @@
 {
   "compilerOptions": {
     "target": "es5",
-    "module": "es2015",
+    "module": "commonjs",
     "sourceMap": true,
     "emitDecoratorMetadata": true,
     "experimentalDecorators": true,
     "stripInternal": true,
     "declaration": true,
     "outDir": "./dist",
-    "lib": ["es2015", "dom"],
+    "lib": ["es2016", "es2015", "dom"],
     "moduleResolution": "node"
   },
   "files": [
