--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "express": "^4.14.0",
     "express-session": "^1.14.0",
     "fs-jetpack": "^0.10.2",
+    "gulp-sass": "^3.1.0",
     "mysql2": "^1.4.2",
     "nodemailer": "^4.2.0",
     "reflect-metadata": "^0.1.10",
